--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,8 +3,7 @@
     "next/core-web-vitals",
     "plugin:unicorn/recommended",
     "plugin:import/recommended",
-    "plugin:playwright/recommended",
-    "plugin:prettier/recommended"
+    "plugin:playwright/recommended"
   ],
   "plugins": ["simple-import-sort"],
   "rules": {
