--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
