--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,6 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "commitlint.config.ts"
-  ],
+, "next.config.js"  ],
   "exclude": ["node_modules"]
 }
