--- a/package.json
+++ b/package.json
@@ -62,11 +62,12 @@
     "next-themes": "^0.4.3",
     "odata-query": "^7.0.6",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-day-picker": "^8.10.1",
+    "react-day-picker": "^9.4.4",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-dropzone": "^14.3.5",
     "react-easy-crop": "^5.2.0",
     "react-hook-form": "^7.53.2",
+    "react-phone-number-input": "^3.4.10",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.13.3",
     "sonner": "^1.7.0",
