--- a/package.json
+++ b/package.json
@@ -54,17 +54,17 @@
     "axios": "^1.7.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
+    "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.4.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.475.0",
     "next": "^15.1.6",
-    "next-themes": "^0.4.3",
+    "next-themes": "^0.4.4",
     "odata-query": "^7.0.9",
     "react": "19.0.0",
-    "react-day-picker": "^9.5.1",
+    "react-day-picker": "8.10.1",
     "react-dom": "19.0.0",
     "react-dropzone": "^14.3.5",
     "react-easy-crop": "^5.2.0",
@@ -78,7 +78,7 @@
     "three": "^0.173.0",
     "use-debounce": "^10.0.4",
     "vaul": "^1.1.2",
-    "zod": "^3.23.8",
+    "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
