--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "commitlint.config.ts"
-, "next.config.js"  ],
+    "commitlint.config.ts",
+    "next.config.js"
+  ],
   "exclude": ["node_modules"]
 }
