--- a/package.json
+++ b/package.json
@@ -47,10 +47,11 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@react-three/drei": "^10.0.0-rc.1",
-    "@react-three/fiber": "^9.0.0-rc.1",
+    "@react-three/drei": "^10.0.1",
+    "@react-three/fiber": "^9.0.4",
     "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-table": "^8.20.5",
+    "@types/three": "^0.173.0",
     "axios": "^1.7.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
