--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "fabric": "^6.6.0",
     "framer-motion": "^12.4.1",
     "input-otp": "^1.4.2",
+    "leva": "^0.10.0",
     "lucide-react": "^0.475.0",
     "next": "^15.1.6",
     "next-themes": "^0.4.4",
