--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "prepare": "husky && husky install",
-    "type-check": "tsc -b"
+    "type-check": "tsc -b",
+    "generate": "graphql-codegen --config codegen.yml"
   },
   "config": {
     "commitizen": {
@@ -19,6 +20,9 @@
     }
   },
   "dependencies": {
+    "@graphql-codegen/cli": "^5.0.5",
+    "@graphql-codegen/typescript": "^4.1.5",
+    "@graphql-codegen/typescript-operations": "^4.5.1",
     "@hookform/resolvers": "^4.1.2",
     "@microsoft/signalr": "^8.0.7",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -61,6 +65,8 @@
     "embla-carousel-react": "^8.5.2",
     "fabric": "^6.6.1",
     "framer-motion": "^12.4.7",
+    "graphql": "^16.10.0",
+    "graphql-request": "^7.1.2",
     "input-otp": "^1.4.2",
     "leva": "^0.10.0",
     "lucide-react": "^0.477.0",
