--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     }
   },
   "dependencies": {
+    "@apollo/client": "^3.13.4",
     "@graphql-codegen/cli": "^5.0.5",
     "@graphql-codegen/typescript": "^4.1.5",
     "@graphql-codegen/typescript-operations": "^4.5.1",
