feat: integrate Apollo Client for GraphQL and refactor authentication flow
- Replaced React Query with Apollo Client for managing GraphQL queries and mutations.
- Updated authentication logic to use Apollo's useLoginMutation for login functionality.
- Refactored user dropdown menu and login form components to align with new authentication structure.
- Removed deprecated GraphQL queries and types, and generated new types using GraphQL Code Generator.
- Adjusted code structure for better clarity and maintainability.

--- a/codegen.yml
+++ b/codegen.yml
@@ -1,9 +1,12 @@
-schema: 'http://localhost:5000/graphql'
-documents: 'src/graphql/**/*.graphql'
+schema: 'http://localhost:5000/graphql' # Replace with your API endpoint
+documents: 'src/graphql/queries/*.graphql' # Path to your GraphQL files
 generates:
-  src/graphql/generated.ts:
+  src/graphql/generated/graphql.tsx: # Output file for generated types
     plugins:
       - 'typescript'
       - 'typescript-operations'
+      - 'typescript-react-apollo'
     config:
-      fetcher: fetch
+      withHooks: true # Generates React hooks like useQuery
+      withComponent: false
+      withHOC: false
