--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "format:check": "prettier --check .",
     "prepare": "husky && husky install",
     "type-check": "tsc -b",
-    "generate": "graphql-codegen --config codegen.yml"
+    "gen": "npx graphql-codegen --config codegen.yml"
   },
   "config": {
     "commitizen": {
@@ -24,6 +24,7 @@
     "@graphql-codegen/cli": "^5.0.5",
     "@graphql-codegen/typescript": "^4.1.5",
     "@graphql-codegen/typescript-operations": "^4.5.1",
+    "@graphql-codegen/typescript-react-apollo": "^4.3.2",
     "@hookform/resolvers": "^4.1.2",
     "@microsoft/signalr": "^8.0.7",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -72,7 +73,7 @@
     "leva": "^0.10.0",
     "lucide-react": "^0.477.0",
     "next": "^15.2.0",
-    "next-themes": "^0.4.4",
+    "next-themes": "^0.4.6",
     "odata-query": "^7.0.9",
     "react": "19.0.0",
     "react-day-picker": "8.10.1",
