--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@graphql-codegen/typescript": "^4.1.5",
     "@graphql-codegen/typescript-operations": "^4.5.1",
     "@graphql-codegen/typescript-react-apollo": "^4.3.2",
-    "@hookform/resolvers": "^4.1.2",
+    "@hookform/resolvers": "^4.1.3",
     "@microsoft/signalr": "^8.0.7",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -71,7 +71,7 @@
     "graphql-request": "^7.1.2",
     "input-otp": "^1.4.2",
     "leva": "^0.10.0",
-    "lucide-react": "^0.477.0",
+    "lucide-react": "^0.483.0",
     "next": "^15.2.0",
     "next-themes": "^0.4.6",
     "odata-query": "^7.0.9",
@@ -88,6 +88,7 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.174.0",
+    "tw-animate-css": "^1.2.4",
     "use-debounce": "^10.0.4",
     "vaul": "^1.1.2",
     "zod": "^3.24.2",
