--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@tanstack/react-table": "^8.20.5",
     "@types/socket.io-client": "3.0.0",
     "@types/three": "^0.174.0",
+    "apollo-upload-client": "^18.0.1",
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -104,6 +105,7 @@
     "@commitlint/types": "^19.5.0",
     "@tailwindcss/postcss": "^4.0.9",
     "@tanstack/eslint-plugin-query": "^5.66.0",
+    "@types/apollo-upload-client": "^18.0.0",
     "@types/node": "^22.13.7",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
