--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "react-phone-number-input": "^3.4.12",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.1",
-    "socket.io-client": "4.7.2",
+    "socket.io-client": "^4.7.2",
     "sonner": "^2.0.2",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
