--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "embla-carousel-react": "^8.5.2",
     "fabric": "^6.6.1",
     "framer-motion": "^12.4.7",
