--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint:fix": "next lint --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "prepare": "husky && husky install",
+    "prepare": "",
     "type-check": "tsc -b",
     "gen": "npx graphql-codegen --config codegen.yml"
   },
@@ -101,9 +101,6 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.7.1",
-    "@commitlint/config-conventional": "^19.7.1",
-    "@commitlint/types": "^19.5.0",
     "@tailwindcss/postcss": "^4.0.9",
     "@tanstack/eslint-plugin-query": "^5.66.0",
     "@types/apollo-upload-client": "^18.0.0",
@@ -122,7 +119,6 @@
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unicorn": "^57.0.0",
-    "husky": "^9.1.7",
     "lint-staged": "^15.4.3",
     "postcss": "^8.5.3",
     "prettier": "^3.5.2",
