--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "graphql": "^16.10.0",
     "graphql-request": "^7.1.2",
     "input-otp": "^1.4.2",
+    "jspdf": "^3.0.1",
     "leva": "^0.10.0",
     "lucide-react": "^0.503.0",
     "next": "^15.2.0",
