--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "graphql-request": "^7.1.2",
     "input-otp": "^1.4.2",
     "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "leva": "^0.10.0",
     "lucide-react": "^0.503.0",
     "next": "^15.2.0",
