--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "dayjs": "^1.11.13",
     "embla-carousel-react": "^8.5.2",
     "fabric": "^6.6.1",
+    "firebase": "^11.8.1",
     "framer-motion": "^12.4.7",
     "graphql": "^16.10.0",
     "graphql-request": "^7.1.2",
