--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,49 +1,49 @@
-name: Build and deploy Next.js app to VPS
+# name: Build and deploy Next.js app to VPS
 
-on:
-  push:
-    branches: ['main']
-  workflow_dispatch:
+# on:
+#   push:
+#     branches: ['main']
+#   workflow_dispatch:
 
-jobs:
-  build:
-    name: Building image
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+# jobs:
+#   build:
+#     name: Building image
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v2
 
-      - name: Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v1
+#       - name: Buildx
+#         id: buildx
+#         uses: docker/setup-buildx-action@v1
 
-      - name: DockerHub login
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+#       - name: DockerHub login
+#         uses: docker/login-action@v1
+#         with:
+#           username: ${{ secrets.DOCKERHUB_USERNAME }}
+#           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push identity migration image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: lequocuy/goodsdesignapi.webapp:latest
+#       - name: Build and push identity migration image
+#         uses: docker/build-push-action@v2
+#         with:
+#           context: .
+#           file: ./Dockerfile
+#           push: true
+#           tags: lequocuy/goodsdesignapi.webapp:latest
 
-  deploy:
-    name: Deploying to VPS
-    runs-on: ubuntu-latest
-    needs: build
+#   deploy:
+#     name: Deploying to VPS
+#     runs-on: ubuntu-latest
+#     needs: build
 
-    steps:
-      - name: Replacing container
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SERVER_HOSTNAME }}
-          username: ${{ secrets.SERVER_USERNAME }}
-          password: ${{ secrets.SERVER_PASSWORD }}
-          script: |
-            cd /root/devops-vps/goodsdesign
-            docker compose pull
-            docker compose up -d
+#     steps:
+#       - name: Replacing container
+#         uses: appleboy/ssh-action@master
+#         with:
+#           host: ${{ secrets.SERVER_HOSTNAME }}
+#           username: ${{ secrets.SERVER_USERNAME }}
+#           password: ${{ secrets.SERVER_PASSWORD }}
+#           script: |
+#             cd /root/devops-vps/goodsdesign
+#             docker compose pull
+#             docker compose up -d
